Work around reflective access errors on JVM 16+